--- a/views/Incentive/create-item.ejs
+++ b/views/Incentive/create-item.ejs
@@ -1,6 +1,6 @@
 <%- include('../shared/head'); %>
 <head>
-	<link rel="stylesheet" href="/css/employee.css" />
+	<link rel="stylesheet" href="/css/shared.css" />
 </head>
 <%- include('../shared/nav', {title: "New Incentive Item", link:
 "/Incentive/items"}) %>
