--- a/views/Incentive/index.ejs
+++ b/views/Incentive/index.ejs
@@ -7,8 +7,9 @@
 <main>
 	<%- include('../shared/nav', {title: "Incentive", link: "/"}) %>
 	<div class="action-list">
+		<a class="action" href="Incentive/details">Quick Search</a>
+		<a class="action" href="Incentive/create-entry">Add New Entry</a>
 		<a class="action" href="Incentive/items">Incentive Items</a>
-		<a class="action" href="Incentive/details">Incentive Details</a>
 		<a class="action" href="Incentive/total">Calculate Totals</a>
 	</div>
 </main>
