view ongoing transactions add new entry

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 		<a class="action" href="/employee">Employees</a>
 		<a class="action">Attendance</a>
 		<a class="action" href="/incentive">Incentive</a>
-		<a class="action">Bonuses & Deductions</a>
+		<a class="action" href="/bonuses">Bonuses & Deductions</a>
 		<a class="action">Payroll</a>
 	</div>
 </main>
