--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -5,8 +5,10 @@
     --background-gradient: linear-gradient(90deg, rgba(208, 212, 253, 1) 0%, rgba(208, 255, 234, 1) 100%);
     --green-light: rgb(232, 255, 248);
     --blue-light: rgb(231, 233, 249);
+    --red-light: #ffe6e9;
     --blue-dark: rgb(91, 85, 252);
     --green-dark: rgba(40, 236, 149, 1);
+    --red-dark: #dc3545;
 }
 
 body {
@@ -114,7 +116,7 @@ body {
     justify-content: center;
     gap: 5px;
     flex-direction: column;
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 
 .entry-vertical {
@@ -199,10 +201,18 @@ body {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
+.list {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    gap: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 .details {
     justify-content: center;
     align-items: center;
-    height: 200px;
     flex-basis: calc(25% - 55px);
     border-radius: 20px;
     padding: 20px;
@@ -212,6 +222,14 @@ body {
     box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
     cursor: pointer;
     white-space: nowrap;
+}
+
+.error {
+    background: var(--red-light);
+}
+
+.error .detail-title{
+    color: var(--red-dark)
 }
 
 .extended-details {
