--- a/public/css/bonus.css
+++ b/public/css/bonus.css
@@ -1,5 +1,10 @@
 @import url("./shared.css");
 
+.bonus{
+    position: relative;
+    cursor: auto;
+}
+
 .bonus-header-buttons{
     width: 50%;
     margin: 30px 25%
@@ -15,6 +20,20 @@
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: var(--green-dark) !important;
+}
+
+.delete-button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: var(--red-dark);
+    color: white;
+    font-size: 1.5rem;
+    border: 0;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+    display: none;
 }
 
 @media(max-width: 1000px) {
