--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./shared/head'); %>
 
 <head>
-    <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="/css/shared.css"/>
 </head>
 
-<main>
+<main class="main-page">
     <h1 class="logo">KTControl</h1>
     <div class="action-list">
         <a class="action" href="/employee">Employees</a>
