--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -17,6 +17,54 @@ body {
     padding: 0;
 }
 
+.main-page {
+    width: 100vw;
+    height: 100vh;
+    background: var(--background-gradient);
+    overflow: auto;
+}
+
+.logo {
+    padding: 100px 0 50px 0;
+    background: var(--solid-gradient);
+    font-size: 13rem;
+    text-align: center;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin: 0 !important;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+@media only screen and (max-width: 1020px) {
+    .logo {
+        font-size: 8rem;
+    }
+}
+
+@media only screen and (max-width: 630px) {
+    .logo {
+        font-size: 4rem;
+    }
+}
+
+.hover-tooltip {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 1.5rem;
+    text-decoration: none;
+    line-height: 30px;
+    font-family: "cursive";
+    background-color: var(--blue-dark);
+    height: 34px;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+    padding: 2px 10px;
+    cursor: pointer;
+}
+
 .link-reset {
     text-decoration: none;
     color: white
@@ -126,7 +174,7 @@ body {
     gap: 10px;
 }
 
-.entry .heading{
+.entry .heading {
     width: 100%;
     height: 50px;
     display: block;
@@ -141,23 +189,23 @@ body {
     margin: 0;
 }
 
-.entry-vertical input{
+.entry-vertical input {
     text-align: center;
 }
 
-.entry-vertical input:disabled{
+.entry-vertical input:disabled {
     background-color: white;
     color: black;
 }
 
-.entry label{
+.entry label {
     white-space: nowrap;
     font-size: 1.5rem;
     margin-right: 10px;
 }
 
 .entry input {
-    width: 100%;
+    /*width: 100%;*/
     height: 50px;
     display: block;
     margin: 5px 0;
@@ -186,7 +234,7 @@ body {
 }
 
 .submit-button {
-    height: 50px;
+    height: 56px;
     background-color: var(--blue-dark);
     color: white;
     border: 2px solid rgba(0, 0, 0, 0.1);
@@ -228,7 +276,7 @@ body {
     background: var(--red-light);
 }
 
-.error .detail-title{
+.error .detail-title {
     color: var(--red-dark)
 }
 
@@ -300,7 +348,7 @@ body {
     flex-direction: column;
     gap: 10px;
     width: 50%;
-    margin: 25px 25vw 0 25vw;
+    margin: 25px 25% 0 25%;
 }
 
 .form-container label {
