Refactor attendance schema and controllers, add error handling
The attendance schema has been refactored to remove the "clockOut" field
as a required property. Additionally, the attendance controller now
includes error handling for employee authentication and entry updates.
Error messages are displayed on the "employees" page when authentication
or entry updates fail.

attendanceEntryFormInput type has been modified

mongodb schema has been modified

--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -70,6 +70,16 @@ body {
     color: white
 }
 
+.error-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 56px;
+    background: var(--red-dark);
+    color: white;
+    border-radius: 10px;
+}
+
 .modal {
     position: fixed;
     top: 0;
@@ -149,7 +159,7 @@ body {
 @media (max-width: 1000px) {
     .action {
         width: 96%;
-        margin: initial 2%;
+        margin: 10px 2%;
     }
 }
 
