takeEmployeeAttendance will have many checks on timestamp to make sure the submission is correct
added a util to calculated workHours difference

added state and constants for attendance controller

minor UI and css enhancements

--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -74,10 +74,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 56px;
     background: var(--red-dark);
     color: white;
     border-radius: 10px;
+    padding: 0 10px;
 }
 
 .modal {
