--- a/views/Attendance/admin.ejs
+++ b/views/Attendance/admin.ejs
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="/css/shared.css"/>
 </head>
 <%- include('../shared/nav', {title: "Attendance Dashboard", link: "/attendance"}) %>
-<main style="display: flex; height: 100vh; width: 100vw; font-size: 5rem; justify-content: center; align-items: center">
+<main style="display: flex; height: calc(100vh - 61px); width: 100vw; font-size: 5rem; justify-content: center;
+align-items:
+center">
     Under Development ⚙️
 </main>
