--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -77,7 +77,14 @@ body {
     background: var(--red-dark);
     color: white;
     border-radius: 10px;
-    padding: 0 10px;
+    padding: 10px;
+}
+
+.error-message p {
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 0;
+    margin: 0;
 }
 
 .modal {
