added links in attendance admin page minor css improvements

--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -271,22 +271,27 @@ body {
     flex-direction: row;
     margin: 20px;
     gap: 20px;
-    align-items: center;
+    align-items: stretch;
     flex-wrap: wrap;
 }
 
 .details {
     justify-content: center;
     align-items: center;
-    flex-basis: calc(25% - 55px);
+    width: calc(25% - 55px);
     border-radius: 20px;
     padding: 20px;
     background: var(--green-light);
     font-size: 1.25rem;
-    line-height: 10px;
+    /*line-height: 10px;*/
     box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
     cursor: pointer;
-    white-space: nowrap;
+    /*white-space: nowrap;*/
+    /*white-space: break-spaces;*/
+}
+
+.details > * {
+    margin: 0 !important;
 }
 
 .error {
