added dayoffs for employees

--- a/views/Attendance/admin.ejs
+++ b/views/Attendance/admin.ejs
@@ -6,5 +6,5 @@
 <main class="action-list">
     <a class="action" href="/attendance/history">View History</a>
     <a class="action" href="/attendance/overtime">Approve Overtime</a>
-    <a class="action" href="/attendance/dayoff">Add a Day Off</a>
+    <a class="action" href="/attendance/dayOff">Add a Day Off</a>
 </main>
