--- a/views/Attendance/history.ejs
+++ b/views/Attendance/history.ejs
@@ -1,4 +1,4 @@
-<%- include('../shared/head'); %>
+<!-- <%- include('../shared/head'); %>
 <head>
     <link rel="stylesheet" href="/css/shared.css"/>
 </head>
@@ -31,4 +31,4 @@
     </div>
 </main>
 
-<script src="/js/attendance.js"></script>
+<script src="/js/attendance.js"></script> -->
