--- a/views/Attendance/index.ejs
+++ b/views/Attendance/index.ejs
@@ -1,12 +1,8 @@
 <%- include('../shared/head'); %>
 <head>
-    <link rel="stylesheet" href="/css/shared.css"/>
-
+	<link rel="stylesheet" href="/css/shared.css" />
 </head>
 <body>
-<%- include('../shared/nav', {title: "Attendance", link: "/"}) %>
-<div class="action-list">
-    <a class="action" href="/attendance/employees">Employees Interface</a>
-    <a class="action" href="/attendance/admin">Admin Dashboard</a>
-</div>
+	<%- include('../shared/nav', {title: "Attendance", link: "/"}) %>
+	<div class="action-list"></div><h1 style="display: flex; justify-content: center;">UNDER DEVELOPMENT</h1></div>
 </body>
