--- a/views/Attendance/admin.ejs
+++ b/views/Attendance/admin.ejs
@@ -1,4 +1,4 @@
-<%- include('../shared/head'); %>
+<!-- <%- include('../shared/head'); %>
 <head>
     <link rel="stylesheet" href="/css/shared.css"/>
 </head>
@@ -7,4 +7,4 @@
     <a class="action" href="/attendance/history">View History</a>
     <a class="action" href="/attendance/overtime">Approve Overtime</a>
     <a class="action" href="/attendance/dayOff">Add a Day Off</a>
-</main>
+</main> -->
