--- a/views/Attendance/dayOff.ejs
+++ b/views/Attendance/dayOff.ejs
@@ -1,4 +1,4 @@
-<%- include('../shared/head'); %>
+<!-- <%- include('../shared/head'); %>
 <head>
     <link rel="stylesheet" href="/css/shared.css"/>
 </head>
@@ -33,4 +33,4 @@
             </div>
         <% } %>
     </form>
-</main>
+</main> -->
