--- a/views/Attendance/overtime.ejs
+++ b/views/Attendance/overtime.ejs
@@ -1,4 +1,4 @@
-<%- include('../shared/head'); %>
+<!-- <%- include('../shared/head'); %>
 <head>
     <link rel="stylesheet" href="/css/shared.css"/>
 </head>
@@ -28,4 +28,4 @@
     </div>
 </main>
 
-<script src="/js/overtime.js"></script>
+<script src="/js/overtime.js"></script> -->
