totally nuke old attendance files created types, models, main index and generate new month controller and view

--- a/views/Attendance/index.ejs
+++ b/views/Attendance/index.ejs
@@ -4,5 +4,9 @@
 </head>
 <body>
 	<%- include('../shared/nav', {title: "Attendance", link: "/"}) %>
-	<div class="action-list"></div><h1 style="display: flex; justify-content: center;">UNDER DEVELOPMENT</h1></div>
+	<div class="action-list">
+		<a class="action" href="">View Current Month</a>
+		<a class="action" href="">View History</a>
+		<a class="action" href="Attendance/generate-new">Generate New Month</a>
+	</div>
 </body>
