create new month database entry updated modal and types for attendance entries (was terrible)

--- a/views/Attendance/generate-new-month.ejs
+++ b/views/Attendance/generate-new-month.ejs
@@ -5,7 +5,7 @@
 <body>
 	<%- include('../shared/nav', {title: "Generate New Month", link:
 	"/Attendance"}) %>
-	<form class="form-container" method="post" action=attendance/generate-new"">
+	<form class="form-container" method="post" action="/attendance/generate-new">
 		<div class="incentive-details-employee">
 			<h1 class="detail-title">Generate New Month:</h1>
 			<p>
