--- a/views/Attendance/index.ejs
+++ b/views/Attendance/index.ejs
@@ -5,7 +5,7 @@
 <body>
 	<%- include('../shared/nav', {title: "Attendance", link: "/"}) %>
 	<div class="action-list">
-		<a class="action" href="">View Current Month</a>
+		<a class="action" href="Attendance/current-month">View Current Month</a>
 		<a class="action" href="">View History</a>
 		<a class="action" href="Attendance/generate-new">Generate New Month</a>
 	</div>
