bug fixes: 1. you can delete an incentive item 2. app won't crash when you have only one incentive item submitted

--- a/views/Incentive/update-item.ejs
+++ b/views/Incentive/update-item.ejs
@@ -48,6 +48,7 @@
 			<small>Date format is Month/Day/Year</small>
 		</div>
 		<input type="submit" value="Submit" class="submit-button" />
+		<input type="button" value="Delete" class="submit-button" id="delete-item-btn">
 	</form>
 </div>
 <script src="/js/incentive.js"></script>
